2004-02-18  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>

	* src/sp-item-transform.cpp (sp_item_move_rel): NR::Matrix'ification.

	* src/desktop-events.cpp (sp_dt_guide_event): Get guide line dialog
	working again: double-click on a guide to show the guide dialog.

	* src/utest/utest.h (UTEST_NAMED_ASSERT):
	Wrap this macro in static_cast<void>().

2004-02-17  MenTaLguY <mental@rydia.net>

	* src/interface.cpp: fixed signal connection in recent items menu

	* src/file.cpp: fix compile and pass UTF-8 "URIs" down to module code

2004-02-17  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>

	* src/sp-guide.h, src/sp-guide.cpp (sp_guide_moveto,
	sp_guide_position_set):
	Combine into a single sp_guide_moveto routine accepting a `commit'
	argument.  Update callers.

2004-02-16  MenTaLguY <mental@rydia.net>

	* src/interface.cpp: fixed bug with underscores in 'open recent' filenames

	* src/libnr/nr-rect.h, src/libnr/nr-types.h: moved NR::Rect to nr-rect.h,
	  minor updates

	* src/libnr/nr-maybe.h: continued work on maybe implementation

	* src/libnr/nr-types.h, src/libnr/nr-rect.cpp, src/libnr/nr-maybe.h,
	  src/seltrans.cpp:
	  started on revising the NR::Rect stuff, and introduced NR::ConvexHull

2004-02-16  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>

	* src/xml/repr.cpp (sp_repr_document_root): Fix typo in most recent commit.

2004-02-14  MenTaLguY <mental@rydia.net>

	* src/svg/svg-path.cpp: switched to locale-safe iostreams-based path
	  serialization.

	* src/xml/repr-io.cpp, src/xml/repr.cpp, src/widgets/sp-xmlview-tree.cpp,
	  src/widgets/sp-xmlview-content.cpp, src/dialogs/xml-tree.cpp:
	  basic support for XML comments

2004-02-14  bulia byak <bulia@users.sourceforge.net>

	* src/dialogs/dialog-events.cpp: Added UTILITY hint to sp_transientize() 

	* po/fr.po: Update from f.rodrigo@tuxfamily.org 

	* src/interface.cpp: Fix for underscore in the recent files menu, by alxrem 
