@@ -1,5 +1,7 @@
 2004-02-18  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>
 
+	* src/dialogs/align.cpp (sp_align_arrange_clicked): Cleanup.
+
 	* src/sp-item-transform.cpp (sp_item_move_rel): NR::Matrix'ification.
 
 	* src/desktop-events.cpp (sp_dt_guide_event): Get guide line dialog
